Mi Playground/force-app/main/default/objects/Account/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Segmentación de la cuenta por su región</description>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Norte</fullName>
            </value>
            <value>
                <fullName>Sur</fullName>
            </value>
            <value>
                <fullName>Centro</fullName>
            </value>
            <value>
                <fullName>Este</fullName>
            </value>
            <value>
                <fullName>Oeste</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>