Mi Playground/force-app/main/default/objects/Account/recordTypes/Cuentas_Institucionales.recordType-meta.xml
<RecordType>
    <fullName>Cuentas_Institucionales</fullName>
    <active>true</active>
    <label>Cuentas Institucionales</label>
</RecordType>